--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src -d lib",
-    "webpack-build": "webpack",
+    "build-demo": "webpack --mode development  --config demo/webpack.config.js",
+    "start": "webpack serve --hot --mode development --config demo/webpack.config.js",
     "test": "node -r esm node_modules/.bin/jest"
   },
   "repository": {
@@ -27,12 +28,20 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@hot-loader/react-dom": "^17.0.1+4.13.0",
+    "@rematch/core": "^1.4.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.17.0",
     "eslint-plugin-jest": "^24.1.3",
     "esm": "^3.2.25",
     "jest": "^26.6.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.2",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1"
