--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rematch/core": "^1.4.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.17.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.1.3",
     "esm": "^3.2.25",
     "jest": "^26.6.3",
